<resources>
    <string name="app_name">Find Me A Bar</string>
    <string name="phone">Тел</string>
    <string name="menu">Меню</string>
    <string name="address">Адрес</string>
    <string name="reserve">Резервирай</string>
    <string name="description">Описание</string>
    <string name="descriptionText">Ако сте любители на средиземноморската кухня, гръцката мусака, рибните продукти, гръцките пресни риби и техния уникален вкус, агнешките котлетчета, хрупкавите тиквички, ливанската кухня, то ресторант The MED e точното място за Вас. На място или у дома: средиземноморския полъх, удоволствието, усещането за уникалност - това е най-малкото, с което ще ни запомните. Ако харесвате гръцката музика, може да се насладите на приятните ни бузуки-вечери всеки петък и събота.</string>
    <string name="username">Потребителско име</string>
    <string name="password">Парола</string>
    <string name="login">Log In</string>
    <string name="signIn">Sign In</string>
    <string name="person_name">Име</string>
    <string name="person_email">Email</string>
    <string name="confirm_pass">Потвърдете паролата</string>
    <string name="salads">Салати</string>
    <string name="foods">Храни</string>
    <string name="drinks">Напитки</string>

    <string-array name="data">
        <item>Pesho</item>
        <item>Gosho</item>
        <item>Tosho</item>
        <item>Marin</item>
        <item>Kalincho</item>
        <item>Misho</item>
        <item>Bobcho</item>
        <item>asdfsadf</item>
        <item>Boaaaabcho</item>
        <item>Bobc33ho</item>
        <item>Bobc2333ho</item>
        <item>444</item>
        <item>Bobsdfscho</item>
        <item>Bsssssobcho</item>
    </string-array>

    <string name="db_api_id">ce9fho1ly52u25nl</string>
    <string name="title_activity_login_activity">Login_activity</string>
    <string name="home">Начален екран</string>
    <string name="success_registration_msg">Регистрацията успешна!</string>
    <string name="user_exsists_msg">Такъв потребител съществува!</string>
    <string name="alert_title_regidtration">Регистрация на нов потребител</string>
    <string name="label_positive_btn">OK</string>
    <string name="warning_invalid_name">Невалидно име!</string>
    <string name="warning_invalid_email">Невалиден email!</string>
    <string name="warning_invalid_username">Невалидно потребителско име!</string>
    <string name="warning_length_password">Парола от 3 до 9 символа!</string>
    <string name="warning_password_not_match">Паролите не съвпадаат!</string>
    <string name="alert_reserve_table_message">Резервирате маса?</string>
    <string name="alert_reservation_confirmed">Резервацията е приета</string>
    <string name="label_negative_btn">Не</string>
    <string name="alert_reserve_table_title">Резервация на маса:</string>
    <string name="alert_reservation_declined">Резервацията е отказана</string>


</resources>


