<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:fillViewport="false"
    android:background="@drawable/background_grey_pattern">
    
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/iv_restaurant_wallpaper"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/restaurant" />

    <LinearLayout
        android:id="@+id/ll_navBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_call"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:drawableLeft="@drawable/ic_phone"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="@string/phone"
            android:background="#8f742f"
            android:textColor="#feeec4" />

        <Button
            android:id="@+id/btn_address"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:drawableLeft="@drawable/ic_location"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="@string/address"
            android:background="#8f742f"
            android:textColor="#feeec4" />

        <Button
            android:id="@+id/btn_menu"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:drawableLeft="@drawable/ic_menu"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="@string/menu"
            android:background="#8f742f"
            android:textColor="#feeec4" />

        <Button
            android:id="@+id/btn_reserve"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="@string/reserve"
            android:background="#8f742f"
            android:textColor="#feeec4" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_description_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_marginTop="10dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:text="@string/description" />

    <TextView
        android:id="@+id/tv_description_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:scrollY="@dimen/activity_vertical_margin"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#7D726F"
        android:text="@string/descriptionText" />


</LinearLayout>
</ScrollView>
